--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,8 +1,15 @@
 <form [formGroup]="cardForm">
     <input formControlName="name">
+    <ng-container *ngIf="cardForm.controls.name.errors">
+        <div *ngIf="cardForm.controls.name.errors['required']">Name is required</div>
+        <div *ngIf="cardForm.controls.name.errors['minlength']">Name must be at least 
+            {{ cardForm.controls.name.errors['minlength'].requiredLength }} char long and is currently 
+            {{ cardForm.controls.name.errors['minlength'].actualLength }} char long</div>
+    </ng-container>
 </form>
 
 
 <!-- Debugging tool: -->
 <div>Form contents: {{ cardForm.value | json }}</div>
 <div>Form is valid: {{ cardForm.valid }}</div>
+<div>Errors around name: {{ cardForm.controls.name.errors | json }}</div>
