validation output styled

--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="cardForm">
-  <app-input [control]="$any(cardForm).controls['name']"></app-input>
+  <app-input [control]="$any(cardForm).controls['name']" label="Name"></app-input>
 </form>
 
 
