--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -9,7 +9,7 @@
   </div>
   <ng-container *ngIf="control.dirty && control.touched && control.errors">
     <div class="help is-danger" *ngIf="control.errors['required']">
-      Name is required
+      This field is is required
     </div>
     <div class="help is-danger" *ngIf="control.errors['minlength']">
       Name must be at least
