--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,32 +1,51 @@
-<form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
-  <app-input
-    [control]="$any(cardForm).controls['name']"
-    label="Name"
-  ></app-input>
-  <app-input
-    [control]="$any(cardForm).controls['cardNumber']"
-    label="Card Number"
-  ></app-input>
-  <app-input
-    [control]="$any(cardForm).controls['expiration']"
-    label="Expiration"
-  ></app-input>
-  <app-input
-    [control]="$any(cardForm).controls['securityCode']"
-    label="Security Code"
-  ></app-input>
-  <button type="submit" class="button is-primary" [disabled]="cardForm.invalid">
-    Submit
-  </button>
-</form>
-
-<!-- Debugging tool: -->
-<br />
-<br />
-<br />
-<br />
-<hr />
-<h3>Debugging output:</h3>
-<div>Form contents: {{ cardForm.value | json }}</div>
-<div>Form is valid: {{ cardForm.valid }}</div>
-<div>Errors around name: {{ cardForm.controls.name.errors | json }}</div>
+<div class="columns">
+  <div class="column">
+    <app-card
+      [name]="cardForm.get('name')!.value"
+      [expiration]="cardForm.get('expiration')!.value"
+      [cardNumber]="cardForm.get('cardNumber')!.value"
+    ></app-card>
+  </div>
+  <div class="column">
+    <form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
+      <app-input
+        [control]="$any(cardForm).controls['name']"
+        label="Name"
+      ></app-input>
+      <app-input
+        [control]="$any(cardForm).controls['cardNumber']"
+        label="Card Number"
+      ></app-input>
+      <div class="columns">
+        <div class="column">
+          <app-input
+            [control]="$any(cardForm).controls['expiration']"
+            label="Expiration"
+          ></app-input>
+        </div>
+        <div class="column">
+          <app-input
+            [control]="$any(cardForm).controls['securityCode']"
+            label="Security Code"
+          ></app-input>
+        </div>
+      </div>
+      <div class="buttons">
+        <button
+          type="submit"
+          class="button is-primary"
+          [disabled]="cardForm.invalid"
+        >
+          Submit
+        </button>
+        <button
+          type="button"
+          class="button is-warning"
+          (click)="onResetClick()"
+        >
+          Reset
+        </button>
+      </div>
+    </form>
+  </div>
+</div>
